pomにslackletを追加